# droidVncServer

./: .classpath  .directory  .gitignore  .project  AndroidManifest.xml  AndroidManifest.xml~  CHANGELOG  NOTE  README  README.md  README~  TODO  build.gradle  build.xml  local.properties  project.properties  updateExecs.sh  updateExecsAndLibs.sh
droidvncdaemon/: .classpath  .project
droidvncdaemon/vnc/: Android.mk  Android.mk~  adb_method.c  adb_method.c~  adb_method.h~  displaybinder.cpp~  displaybinder.h~  droidvncserver.c  droidvncserver.c~  framebuffer_method.c~  framebuffer_method.h~  gralloc_method.c  gralloc_method.c~  gui.c~  input.h  suinput.c
droidvncdaemon/vnc/libvncserver-kanaka/libvncserver/: .cvsignore  Makefile.am  httpd.c  main.c  stats.c
droidvncgrab/: Android.mk  README  droidVncGrab.cpp  droidVncGrab.h  screenFormat.h
droidvncgrab/vnc/: .droidvncserver.c.swp  displaybinder.cpp  gui.h
jni/: Android.mk  Application.mk
jni/jpeg/: Android.mk
jni/jpeg-turbo/: Android.mk  Makefile.am  jccolor.c  jconfig.h  jdapimin.c  jdapistd.c  jdcoefct.c  jdcolor.c  jdhuff.c  jdinput.c  jdmarker.c  jdmaster.c  jdmerge.c  jdphuff.c  jdtrans.c  jmorecfg.h  jpegint.h  jpeglib.h  jutils.c  libjpeg.map  tjbench-libjpeg62
jni/libpng/: Android.mk  ThirdPartyProject.prop  pngrutil.c
jni/openssl/: Android.mk  openssl.config
jni/vnc/: .droidvncserver.c.swp  Android.mk  Android.mk~  adb_method.h  common.h  displaybinder.h  droidvncserver.c  fbvncserver.1c  fbvncserver.c  fbvncserver.c~  framebuffer_method.c  framebuffer_method.h  gralloc_method.h  gui.c  gui.h  input.c  suinput.c  suinput.h  updateScreen.c  update_screen.c  update_screen.c~  update_screen1.c
libs/armeabi/: androidvncserver  tickminicom
nativeMethods/: Android.mk  common.h  screenFormat.h
nativeMethods/flinger/: Android.mk  README  flinger.cpp  flinger.h
nativeMethods/gralloc/: .gralloc.c.swp  Android.mk  README  gralloc.c  gralloc.h
nativeMethods/lib/: README
res/anim/: animation.xml
res/drawable/: .directory  btnstart.xml  btnstop.xml
(+157 files in other folders)
